--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,9 +1,12 @@
-- Bug fix to MySQLDialect::create resulting in malformed sql statement generation when table has no primary key
-- Bug fix to #@Restrict interceptor. Refactored to support new type hinted Identity::hasRole.
-- Optimization to MVC::dispatch - removed special handling of intercepted controllers
-
-
--- Studio Updates --
-- Nasty bug fix to NewModel create process. ExtJS was causing 'handler' property to be executed twice.
-- Added Phing build file to new project creation process
-- Bug fix to NewModelRemote::create. Was updating studio orm.xml instead of selected project.
+- Bug fix to InterceptorProxy. Interceptors which return null were resulting in
+  an assumption that no interception took place. Now interceptors that return null
+  result in null being returned to the caller.
+- Abstracted #@Cache interceptor to allow configurable "CacheProvider" implementations.
+- CacheProvider interface along with FileCacheProvider, XCacheProvider, and ApcCacheProvider
+  implementations. #@Cache defaults to FileCacheProvider.
+- Added cache element with provider attribute to agilephp.dtd so #@Cache interceptor
+  can be pre-configured in agilephp.xml
+- Added delete .cache directory operation to build.xml test and clean targets since
+  chown/chmod bug was fixed with new caching abstraction layer.
+- Bug fix to AgilePHP; when running under xcache, FrameworkException was not being autoloaded.
+  FrameworkException has now been moved to its own class and is the first class included. 
