--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,16 @@
-- Squeezed ~200 more requests per second by changing require_once to require
- in AgilePHP.php.
-- Removed framework autoloading and replaced with static classmap - still needs to be tested on windows
-- Altered version number and configured build.xml for Bugfix increments
+- Bug fix to AgilePHP::setDebugMode introduced by static refactoring
+- Bug fix to ORM::setOffet and ORM::getOffset. Missing static keyword.
+- Added preliminary support for many-to-many relationships using two
+  one-to-many or many-to-one relationships with a junction table.
+- Added support to ORM and MVC rendering for primary keys which are
+  also foreign keys (many-to-many).
+- Bug fix to FileCacheProvider - was throwing CachingException instead
+  of CacheException
+- Removed "Transformer" and derived classes from rest package and static
+  AgilePHP classmap.
+- Created data/renderer and data/transformer packages. Integrated with
+  REST and ORM components. Added to AgilePHP static classmap.
+- Changed dynamic form checkbox type from sql bit to boolean
+- Deleted BitValidator
+- Reverted BaseDialect::execute back to passing arguments into PDO::execute
+  as an array rather than looping through each value using bindValue.
