--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,2 +1,10 @@
-- Bug fix to studio package introduced by refactoring of user.enabled bit to boolean
-- Updated agilephp_studio.sql
+- Added php namespace support to AJAXRenderer::toXML and XmlRenderer::render.
+- Collapsed AJAXRenderer and data/renderer/* functionality and deprecated AJAXRenderer
+  methods. Will remove in a later release.
+- Bug fix to Upload component when move_uploaded_file failed resulting in undefined $error variable.
+- Two bug fixes to BaseModelXslController (getModelFormXSL and getModelListXSL) in regards to
+  new many-to-many relationship support refactoring.
+- Added logic to BaseDialect::validate to skip validation on required blob columns (file upload) during
+  updates, otherwise, users would be forced to re-upload their image when updating other fields.
+- Bug fix to BaseDialect::find - offset, orderby, etc is now cleared on both conditions instead of only
+  on distinct queries.
