--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,17 +1,17 @@
-- More fine tuning of MVC::dispatch and MVC::loadController
-- Refactored MVC::dispatch caching logic from "die" to "echo and return".
-- Refactored AgilePHP::parseXml spl_autoload_register logic
-  to prepend to autoload stack rather than append.
-- Refactored BaseModelActionController::$xsltRenderer from private to protected
-- Cleaned up XSLTRenderer doc comments. Added optional $declaration parameter to
-  XSLTRenderer::render and XSLTRenderer::transform. Defaults to false (dont include).
-- Bug fix to rarely tested Form::getHTML. Brought into alignment with Form::getXSL.
-- Cleaned up test/view/form-example.phtml
-- Removed extraneous meta equiv tag from test/remoting-example.html
-- Bug fix to BaseModelXslController::getModelListXSL which resulted in malformed
-  XSL document when both "display" and "description" atrribute values were missing from
-  orm.xml table element.
-- Bug fix to BaseModelXslController::getModelAsReadOnlyXSL when rendering foreign keys.
-  (there is still a bug here when updating - will fix on next checkin)
+- refactored component autoloader so that InterceptorFilter is executed only if
+  agilephp.xml contains a valid <annotations/> configuration element.
+- Added Component::getParams
+- Performance optimization to PHTMLRenderer::render
+- Refactored support for front controller style components to AgilePHP.ORM.search in client side javascript
+- Bug fix to Form::getXSL introduced from recent bit -> boolean checkbox refactoring
+- Refactored FrameworkException so all constructor arguments are now optional. Defaults to error_get_last() values.
+- Refactored TestComponent and TestPhar test components.
+- Created src/mvc/ComponentModelActionController.php which overrides BaseModelActionController to provide
+  the same functionality for front controller style components.
+- Component.xml is now being validated against component.dtd
+- Added TestComponent and TestPhar to test/view/header.html and performed
+  various tweaks, enhancements and bug fixes to components
+- Adding new "backward compatible apidoc" flag to changelog which indicates if changes have been made to the
+  framework which breaks backward compatibility / changes interfaces, object names or methods, etc.
 
-** agilephp_helloworld benchmark now breaking 5000 requests per second - w00t w00t! **
+Backward compatible apidoc: No
