- Added new orm.dtd column types to component.dtd - Bug fix to Interception::createInterceptorProxy when using namespaced controller - Bug fix to RestService::intercept when using namespaced controller/service
Backward compatible apidoc: Yes

git-svn-id: https://agilephp.svn.sourceforge.net/svnroot/agilephp/trunk@159 9bb1911b-6204-4126-9146-82cb5eeae392

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,14 +1,5 @@
-- Added "port" configuration support to ORM package.
-- Refactorings to bring MySQLDialect and PGSQLDialect classes into alignment with Pear coding standard.
-- Bug fix to IdentityManagerImpl::login when using custom non-sql authenticator. Was trying to perform
-  a merge operations which is now triggered only if the Authenticator implementation is an instanceof
-  DefaultAuthenticator (which means custom sql based authenticators should extend DefaultAuthenticator).
-- Bug fix to BasicAuthentication as a result of refactoring Authenticator to static context.
-- Added "custom" type to orm.dtd to allow for custom user-defined (postgres) data types.
-- Bug fix to logging levels ("error" level conditional was incorrect)
-- Bug fix to RestUtil::serverTransform caused by empty array $data. Also fixed several logging directives
-  which were referencing old "MimeUtil" class name.
-- Bug fix to mysql, mssql, and pgsql dialect "find" - using hard coded foreign model class name instead
-  of the configured column/property value in orm.xml.
+- Added new orm.dtd column types to component.dtd
+- Bug fix to Interception::createInterceptorProxy when using namespaced controller
+- Bug fix to RestService::intercept when using namespaced controller/service
 
 Backward compatible apidoc: Yes
