- Performance tweaks to annotation package - Performance tweaks to orm package - Refactored MVC::dispatch to allow parameterized invocation using specified controller/action values. - Moved DomainModel from mvc package to orm package - Bug fix to User domain model. setLastLogin now ignores null date values. - Added DomainModel type casting to ORM persist, merge, delete, find, get, truncate and call. - Bug fix to InterceptorProxy when parsing class level annotations in namespaced classes. - Bug fix to PGSQLDialect::find when using case sensitive table/column names. - Performance optimization to AnnotationParser, AnnotatedMethod and AnnotatedProperty classes. - Refactored #@Cache interceptor to use new <caching/> configuration element - Added "parameters" and "contentType" attribute values to agilephp.dtd for mvc <cache/> element
Backward compatible apidoc: No

git-svn-id: https://agilephp.svn.sourceforge.net/svnroot/agilephp/trunk@165 9bb1911b-6204-4126-9146-82cb5eeae392

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -6,5 +6,8 @@
 - Added DomainModel type casting to ORM persist, merge, delete, find, get, truncate and call.
 - Bug fix to InterceptorProxy when parsing class level annotations in namespaced classes.
 - Bug fix to PGSQLDialect::find when using case sensitive table/column names.
+- Performance optimization to AnnotationParser, AnnotatedMethod and AnnotatedProperty classes.
+- Refactored #@Cache interceptor to use new <caching/> configuration element
+- Added "parameters" and "contentType" attribute values to agilephp.dtd for mvc <cache/> element
 
 Backward compatible apidoc: No
